@@ -69,3 +69,4 @@
 2.1.10 	- Fixed: widget opening in order administration
 	- Fixed: Fix: weight units - accepting capital letters	
 2.1.11 - Updated: order weight editing in Packeta order administration: saving only changed values, better display of results
+       - Fixed: no more displaying of selected pickup point on confirmation page if the order is not a pickup point order
